<resources>
    <string name="app_name">GCook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image_food_btn">Thêm ảnh món ăn</string>
    <string name="add_image_food">Ảnh món ăn</string>
    <string name="hint_name_food">Tên món ăn</string>
    <string name="hint_des_food">Mô tả món ăn</string>
    <string name="title_material">Nguyên liệu</string>
    <string name="add_material_btn">Thêm nguyên liệu</string>
    <string name="hint_username">Tên người dùng</string>
    <string name="hint_material">Tên thành phần</string>
    <string name="hint_material_quality">Số lượng</string>
    <string name="hint_content_cmt">Nội dung</string>
    <string name="title_food_new">Món ăn mới</string>
    <string name="title_food_search">Món ăn được tìm kiếm nhiều</string>
    <string name="title_cmt_new">Bình luận mới</string>
    <string name="name_app">G-Cook</string>
    <string name="welcome">Chào mừng bạn đến với</string>
    <string name="sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="register">Đăng ký thông tin</string>
    <string name="hint_email">Email</string>
    <string name="register_btn">Xác nhận thông tin</string>
    <string name="title_step">Bước làm</string>
    <string name="add_step_btn">Thêm bước</string>
    <string name="hint_add_step">Bước làm</string>
    <string name="add_food_btn">Thêm công thức</string>
    <string name="cmt_title">Bình luận</string>
    <string name="hint_cmt">Bình luận của bạn</string>
    <string name="hint_new_food_detail">Món ăn mới của user</string>
    <string name="hint_time">5 phút trước</string>
    <string name="hint_time_food">Ngày đăng: 20/10/2002</string>
    <string name="hint_search">Nhập tên món ăn</string>
</resources>