<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Food.AddFoodActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/image_food"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/add_image_food"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/add_image" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/up_image_food"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_upgrade"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/add_image_food_btn"
            android:textAllCaps="false"
            android:textColorHint="#FFAA00"
            app:cornerRadius="5dp"
            android:drawableTint="@color/theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_food"
            app:strokeColor="@color/theme"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/dashed_line_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/up_image_food"
            app:srcCompat="@drawable/dashed_line"
            android:layerType="software"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_food_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_name_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashed_line_1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_food"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/des_food_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/hint_des_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_food_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/des_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/dashed_line_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des_food_layout"
            android:src="@drawable/dashed_line"
            android:layerType="software"/>

        <TextView
            android:id="@+id/title_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_material"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashed_line_2" />

        <LinearLayout
            android:id="@+id/list_add_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_material"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:drawableLeft="@drawable/ic_add_btn"
            android:text="@string/add_material_btn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            android:drawableTint="@color/theme"
            app:strokeColor="@color/theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_add_material"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/dashed_line_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_material"
            android:src="@drawable/dashed_line"
            android:layerType="software"/>

        <TextView
            android:id="@+id/title_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/title_step"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashed_line_3" />

        <LinearLayout
            android:id="@+id/list_add_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/title_step"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:drawableLeft="@drawable/ic_add_btn"
            android:text="@string/add_step_btn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            android:drawableTint="@color/theme"
            app:strokeColor="@color/theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_add_step"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/dashed_line_4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_step"
            android:src="@drawable/dashed_line"
            android:layerType="software"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_btn"
            android:text="@string/add_food_btn"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            android:drawableTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashed_line_4"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>